
0.3.0 (WORK IN PROGRESS)

    * FIX: Updated BusyBox binary with 'passwd' patch
    * FIX: NVRAM dump on US models
    * FIX: fixes for nonexistent links for YWE on USB storage device
    * FIX: run DHCP client in background to not delay boot process in case of lack DHCP server connection
    * ADD: Changelog file to SVN
    * ADD: update time at boot using NTP servers pool
    * ADD: create /mnt/user/www dir if it does not exist
    * ADD: autoupgrade from USB storage device from /mnt/usb1/Drive1/OpenLGTV_BCM/upgrade/ dir at boot
    * ADD: automatic backup to USB storage device if /mnt/usb1/Drive1/OpenLGTV_BCM/make_backup file exists
    * ADD: executing scripts from USB storage device from /mnt/usb1/Drive1/OpenLGTV_BCM/autorun/ dir at boot
    * ADD: auto mount-binding /mnt/user/modules/wl.ko to /mnt/lg/res/lgres/wl.ko, so if you have new/modified driver for wireless card you can just put in /mnt/user/modules/ and it will be used at start
    * ADD: erase lginit partitions at boot if not erased
    * ADD: support for Yahoo Widgets (both Engine and Data) mounting from /mnt/usb1/Drive1/OpenLGTV_BCM/{ywe,ywedata}
    * ADD: support for Yahoo Widgets Data used as ramdisk (set to max 80MB) if ywedata partition is not available in both NAND flash or USB storage device
    * ADD: support for Samsung Yahoo Widgets (by default drop support for LG Yahoo Widgets - Samsung offer all the LG has and it's newer platform and a lot more widgets)
    * ADD: adding Yahoo Widgets NetCast item by default for EU models
    * ADD: if there's now 'ywe' dir on 'addon' partition then set Yahoo Widgets Engine dir to /mnt/usb1/Drive1/OpenLGTV_BCM/ywe
    * ADD: RELEASE is started now in tmux, so it's possible to control RELEASE over telnet or SSH, too
    * ADD: /mnt/user/cfg/settings file with configuration variables for OpenLGTV BCM scripts