@@ -114,6 +114,8 @@ Answer for people asking if they can use it if they have already made modificati
     * FIX: NVRAM dump on US models
     * FIX: fixes for nonexistent links for YWE on USB storage device
     * FIX: run DHCP client in background to not delay boot process in case of lack DHCP server connection
+    * FIX: memory check problem on install or upgrade - now there's counted memory taken by buffers, too
+    * FIX: do not run upgrade when there are not flashable files in upgrade dir
     * ADD: Changelog file to SVN
     * ADD: update time at boot using NTP servers pool
     * ADD: create /mnt/user/www dir if it does not exist
